# tract-ic-ai

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
core/src/model/: mod.rs
core/src/ops/: mod.rs
data/: Cargo.toml
data/src/: lib.rs
hir/: Cargo.toml
hir/src/: lib.rs  macros.rs
hir/src/infer/: mod.rs
linalg/: Cargo.toml
linalg/src/: lib.rs
linalg/src/frame/: element_wise.rs  mmm.rs  sigmoid.rs  tanh.rs
nnef/: Cargo.toml
nnef/src/: framework.rs
nnef/src/ops/: core.rs
onnx/: .gitignore  Cargo.toml
onnx-opl/: Cargo.toml
onnx-opl/src/: lib.rs
onnx/src/: lib.rs  model.rs  pb_helpers.rs  tensor.rs
onnx/src/ops/: mod.rs  rec.rs
