[workspace]
resolver = "2"
members = [
    "data",
    "linalg",
    "core",
    "hir",
    "nnef",
    "onnx-opl",
    "onnx",
]

[workspace.dependencies]
anyhow = { version = "1.0.43" , default-features=false}
bit-set= { version = "0.5.2", default-features=false}
byteorder = { version = "1.4.3"} #, default-features = false} #ideally would find the needed features
bytes = { version = "1.0.1", default-features = false}
derive-new = { version = "0.5.9", default-features = false}
downcast-rs = { version = "1.2.0", default-features = false}
dyn-clone = { version = "1.0.4", default-features = false}
lazy_static = { version = "1.4.0", default-features = false}
log = { version = "0.4.14", default-features = false}
maplit =  { version = "1.0.2", default-features = false}
ndarray =  { version = "0.15.3", default-features = false}
nom = { version = "7.0.0", default-features = false}
num-complex = { version = "0.4.0", default-features=false}
num-integer =  { version = "0.1.44", default-features = false}
num-traits = { version = "0.2.14", default-features = false}
paste = { version = "1.0.5", default-features = false}
prost = { version = "0.11.0"} #, default-features = false} #ideally would find the needed features
smallvec =  { version = "1.6.1", default-features = false}
scan_fmt =  { version = "0.2.6", default-features = false}
tar = { version = "0.4.37", default-features = false}






[profile.release]
opt-level = "s"
#lto = true

#[profile.dev.package."*"]
#opt-level = 2


