[package]
name = "tract-core"
version = "0.20.22-pre"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
rust-version = "1.65"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow.workspace = true
bit-set.workspace = true
derive-new.workspace = true
downcast-rs.workspace = true
dyn-clone.workspace = true
log.workspace = true
#maplit = "1.0.2"
ndarray = { version = "0.15.3"}#, default-features=false}
num-complex.workspace = true
num-traits.workspace = true
paste.workspace = true
rustfft = { version = "6.1", features = [ "neon" ], default-features=false }
tract-linalg = { path = "../linalg" }
tract-data = { path = "../data" }

[features]
default = [ ]
#complex = [ "tract-data/complex", "tract-linalg/complex" ]
paranoid_assertions = []

[dev-dependencies]
#criterion.workspace = true
#env_logger.workspace = true
#lazy_static.workspace = true
#proptest.workspace = true
#approx.workspace = true

[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"
#opt-level = "z"