[package]
name = "tract-data"
version = "0.20.22-pre"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
rust-version = "1.65"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.43"
half = { version="=2.2.1", features = [ "std", "num-traits" ] }
itertools = "0.10.1"
lazy_static = "1.4.0"
maplit = "1.0.2"
ndarray = "0.15.3"
nom = "7.0.0"
num-complex = { version = "0.4.0", optional = true }
num-integer = "0.1.44"
num-traits = "0.2.14"
smallvec = "1.6.1"
scan_fmt = "0.2.6"
string-interner = "0.14"



[dev-dependencies]
#criterion.workspace = true
#proptest.workspace = true

[features]
complex = [ "num-complex" ]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
#opt-level = "z"