[package]
name = "tract-data"
version = "0.20.22-pre"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
rust-version = "1.65"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow =  { version = "1.0.43"}#, default-features = false}
half = { version="=2.2.1", features = [ "std", "num-traits" ] }
itertools =  { version = "0.10.1"}#, default-features = false}
lazy_static =  { version = "1.4.0", default-features = false}
maplit =  { version = "1.0.2", default-features = false}
ndarray =  { version = "0.15.3", default-features = false}
nom =  { version = "7.0.0"}#, default-features = false}
num-complex = { version = "0.4.0", optional = true }
num-integer =  { version = "0.1.44", default-features = false}
num-traits =  { version = "0.2.14", default-features = false}
smallvec =  { version = "1.6.1", default-features = false}
scan_fmt =  { version = "0.2.6", default-features = false}
string-interner =  { version = "0.14" }#, default-features = false}



[dev-dependencies]
#criterion.workspace = true
#proptest.workspace = true

[features]
complex = [ "num-complex" ]

[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"
#opt-level = "z"