[package]
name = "tract-hir"
version = "0.20.22-pre"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2021"

#[badges]
#maintenance = { status = "actively-developed" }

[dependencies]
#derive-new.workspace = true
#log.workspace = true
derive-new = { version = "0.5.9", default-features = false}
log = { version = "0.4.14", default-features = false}
tract-core = { version = "=0.20.22-pre", path = "../../tract-main/core" , default-features = false}
#tract-core = { version = "0.20.22", default-features = false}

#[dev-dependencies]
#env_logger.workspace = true

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
#opt-level = "z"  # more aggresive compression
