[package]
name = "tract-hir"
version = "0.20.22-pre"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2021"

#[badges]
#maintenance = { status = "actively-developed" }

[dependencies]
derive-new.workspace = true
log.workspace = true
tract-core = { path = "../core" , default-features = false}

[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"
#opt-level = "z"  # more aggresive compression
