[package]
name = "tract-linalg"
version = "0.20.22-pre"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>", "Jeshli <jeshli.eth@gmail.com>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = ["TensorFlow", "NeuralNetworks"]
categories = ["science"]
autobenches = false
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
derive-new.workspace = true
downcast-rs.workspace = true
dyn-clone.workspace = true
lazy_static.workspace = true
num-traits.workspace = true
paste.workspace = true
tract-data = { path = "../data" }




[dev-dependencies]
#criterion.workspace = true
#env_logger.workspace = true
#nu-ansi-term.workspace = true
#proptest.workspace = true
#core_affinity.workspace = true

[features]
# This feature is meant to accomodate very restrictive / legacy toolchains that do
# have support for fp16 instructions, breaking tract compilation.
# It is not meant to be used in other situations, where run-time detection is
# preferred.
no_fp16 = []
default = []
complex = [ "tract-data/complex" ]

[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"
#opt-level = "z"