[package]
name = "tract-nnef"
version = "0.20.22-pre"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
license = "MIT OR Apache-2.0"
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "NeuralNetworks", "NNEF" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
rust-version = "1.65"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
log = { version = "0.4.14", default-features = false}
#byteorder.workspace = true
byteorder = { version = "1.4.3"}#,, default-features = false}
#log.workspace = true
#nom.workspace = true
nom = { version = "7.0.0", default-features = false}
#tar.workspace = true
tar = { version = "0.4.37", default-features = false}
#walkdir.workspace = true
#walkdir = { version = "2.3.2", default-features = false}
#flate2 = { workspace = true, optional = true }
flate2 =  {version = "1.0.20", optional = true }
tract-core = { path = "../core" , default-features = false}
#tract-core = { version = "0.20.22", default-features = false}

#[dev-dependencies]
#temp-dir = "0.1.11"
#serde_json.workspace = true

[features]
default = ["flate2"]
#complex = [ "tract-core/complex" ]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
#opt-level = "z"  # more aggresive compression
