[package]
name = "tract-nnef"
version = "0.20.22-pre"
authors = ["Mathieu Poumeyrol <kali@zoy.org>", "Jeshli <jeshli.eth@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "NeuralNetworks", "NNEF" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
rust-version = "1.65"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
byteorder.workspace = true
log.workspace = true
nom.workspace = true
tar.workspace = true
tract-core = { path = "../core" , default-features = false}

[features]
#default = ["flate2"]
#complex = [ "tract-core/complex" ]

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"
#opt-level = "z"  # more aggresive compression
