[package]
name = "tract-onnx-opl"
version = "0.20.22-pre"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
license = "MIT OR Apache-2.0"
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks", "ONNX" ]
categories = [ "science" ]
autobenches = false
edition = "2021"

#[badges]
#maintenance = { status = "actively-developed" }

[dependencies]
getrandom = { version = "0.2", default-features = false}
#getrandom.workspace = true
log = { version = "0.4.14", default-features = false}
#log.workspace = true
#rand.workspace = true
#rand = { version = "0.8.4", features = ["small_rng"] }
#rand_distr.workspace = true
#rand_distr = { version ="0.4"} #, default-features = false}
#rustfft.workspace = true
#rustfft = { version = "6.1", features = [ "neon" ] , default-features = false}
tract-nnef = { path = "../nnef", default-features = false, features=['flate2'] }

#[dev-dependencies]
#env_logger.workspace = true

[features]
default = []
getrandom-js = ["getrandom/js"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
#opt-level = "z"  # more aggresive compression
