[package]
name = "tract-onnx-opl"
version = "0.20.22-pre"
authors = ["Mathieu Poumeyrol <kali@zoy.org>", "Jeshli <jeshli.eth@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks", "ONNX" ]
categories = [ "science" ]
autobenches = false
edition = "2021"


[dependencies]
log.workspace = true
tract-nnef = { path = "../nnef", default-features = false}#, features=['flate2'] }

[features]
default = []
#getrandom-js = ["getrandom/js"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
#opt-level = "z"  # more aggresive compression
