[package]
name = "tract-onnx"
version = "0.20.22-pre"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
license = "MIT OR Apache-2.0"
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks", "ONNX" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
exclude = [ "test_cases" ]
# build = "build-proto-rs"
rust-version = "1.65"



[dependencies]
#bytes.workspace = true
#derive-new.workspace = true
#log.workspace = true
#memmap2.workspace = true
#num-integer.workspace = true
#prost.workspace = true
#smallvec.workspace = true
#tract-nnef = { version = "=0.20.22-pre", path = "../tract-main/nnef", default-features = false}
#tract-hir = { version = "=0.20.22-pre", path = "../tract-main/hir", default-features = false}
#tract-onnx-opl = { version = "=0.20.22-pre", path = "../tract-main/onnx-opl", default-features = false}
tract-nnef = { version = "=0.20.22-pre", path = "../nnef", default-features = false}
tract-hir = { version = "=0.20.22-pre", path = "../hir", default-features = false}
tract-onnx-opl = { version = "=0.20.22-pre", path = "../onnx-opl", default-features = false}
bytes = { version = "1.0.1", default-features = false}
derive-new = { version = "0.5.9", default-features = false}
log = { version = "0.4.14", default-features = false}
#memmap2 = { version = "0.5", default-features = false}
#num-integer = { version = "0.1.44", default-features = false}
prost = { version = "0.11.0"}#, default-features = false}
#smallvec = { version = "1.6.1", default-features = false}


#[dev-dependencies]
#env_logger.workspace = true

# [build-dependencies]
# protobuf-src = "1.0.5+3.19.3"
# prost-build = "0.11.1"


[features]
default = []
getrandom-js = ["tract-onnx-opl/getrandom-js"]


[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"
opt-level = "z"  # more aggresive compression
