[package]
name = "tract-onnx"
version = "0.20.22-pre"
authors = ["Mathieu Poumeyrol <kali@zoy.org>", "Jeshli <jeshli.eth@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks", "ONNX" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
exclude = [ "test_cases" ]
# build = "build-proto-rs"
rust-version = "1.65"



[dependencies]
bytes.workspace = true
derive-new.workspace = true
log.workspace = true
prost.workspace = true
tract-nnef = { path = "../nnef", default-features = false}
tract-hir = { path = "../hir", default-features = false}
tract-onnx-opl = { path = "../onnx-opl", default-features = false}




[features]
default = []
#getrandom-js = ["tract-onnx-opl/getrandom-js"]


[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"
#opt-level = "z"  # more aggresive compression
